--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<!-- Slider -->
 
-	<div class="main_slider" style="background-image:url(https://scontent.fsrg6-1.fna.fbcdn.net/v/t39.30808-6/420184126_122098907084190505_762134026720492217_n.jpg?stp=dst-jpg_p180x540&_nc_cat=103&ccb=1-7&_nc_sid=3635dc&_nc_ohc=U_q7YLDy67YAX_XMy0G&_nc_ht=scontent.fsrg6-1.fna&oh=00_AfBdBPrakpOdoaEmu_J4Zn2MbuE98QGEVRJfSGUUUR5kwQ&oe=65ACAD64)">
+	<div class="main_slider" style="background-image:url(images/gambar.jpg)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				
