--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<!-- Slider -->
 
-	<div class="main_slider" style="background-image:url(images/gambar.jpg)">
+	<div class="main_slider" style="background-image:url(images/gambar3.jpg)">
 		<div class="container fill_height">
 			<div class="row align-items-center fill_height">
 				
